# temperature_and_humidity_monitoring

./: README.md  sketch_suport_3d.kra  sketch_suport_3d.kra~
https-request-test/: CMakeLists.txt  https-request-test.c
proxy_server/: .env  package-lock.json  package.json  proxy.js
temp_hum_monitoring/: CMakeLists.txt  lwipopts.h  temp_hum_monitoring.c
temp_hum_monitoring/include/: http_client.h  max30100.h  temperature_sensor.h  web_server.h  wifi_connection.h
temp_hum_monitoring/src/: http_client.c  max30100.c  temperature_sensor.c  web_server.c  wifi_connection.c
